--- a/GestionUtilisateur-FrontEnd-master3/src/app/login/login.component.css
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/login/login.component.css
@@ -10,7 +10,7 @@ h1{
   color: #fff;
 }
 #LoginForm{ 
-  background-image:url("../../assets/images/Imgiset.png"); 
+  background-image:url("../../assets/images/bgLog.jpg"); 
   background-repeat:no-repeat;
    background-position:center; 
    background-size:cover; 
