--- a/GestionUtilisateur-FrontEnd-master3/src/app/login/login.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/login/login.component.html
@@ -31,8 +31,8 @@
 </div>
 </div> -->
 <div id="LoginForm">
-    <div id="lang"> <button mat-mini-fab class="buttonColor" (click)="switchLanguage('fr')">FR</button>
-      <button mat-mini-fab class="buttonColor" (click)="switchLanguage('ar')">AR</button></div>
+    <div id="lang"> <button mat-mini-fab class="buttonColor" (click)="switchLanguage('fr')">Fr</button>
+      <button mat-mini-fab class="buttonColor" (click)="switchLanguage('ar')">عربي</button></div>
     <div class="container spacer">
     <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-12"></div>
@@ -50,7 +50,7 @@
         </div>
         <div class="form-group small clearfix">
             <!-- <label class="checkbox-inline"><input type="checkbox"> Remember me</label> -->
-            <a href="/" class="forgot-link">Mot de passe oublié?</a>
+            <!-- <a href="/" class="forgot-link">Mot de passe oublié?</a> -->
         </div> 
         <input type="submit" class="btn btn-primary btn-block btn-lg" (click)="chercheUser()" value="Connexion">              
     </form>		
