--- a/GestionUtilisateur-FrontEnd-master3/src/app/diplome-personnel/diplome-personnel.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/diplome-personnel/diplome-personnel.component.html
@@ -8,6 +8,13 @@
       </mat-select>
     </mat-form-field>
     <mat-form-field>
+        <mat-select placeholder="Organisme" [(value)]="organisme" required name="orgDipfr">
+          <mat-option *ngFor="let o of orgOrigines" [value]="o">
+            {{ o.libelleOrg }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    <mat-form-field>
       <input matInput [matDatepicker]="picker1" placeholder="Date de Diplôme" [(ngModel)]="diplomep.date">
       <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
       <mat-datepicker #picker1></mat-datepicker>
@@ -22,6 +29,13 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <mat-form-field>
+            <mat-select placeholder="المؤسسة" [(value)]="organisme" required name="orgDip">
+              <mat-option *ngFor="let o of orgOrigines" [value]="o">
+                {{o.libelleOrgAr }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
         <mat-form-field>
           <input matInput [matDatepicker]="picker1" placeholder="Date de Diplôme" [(ngModel)]="diplomep.date">
           <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
