--- a/GestionUtilisateur-FrontEnd-master3/src/app/modal-conge/modal-conge.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/modal-conge/modal-conge.component.html
@@ -83,14 +83,9 @@
       </div>
     </div>
        <!--end Modale Arabe-->
-      <div class="modal-footer">
-        <div class="btn-group btn-group-justified" role="group" aria-label="group button">
-            <div class="btn-group" role="group">
-                <button type="button" id="saveImage" class="btn btn-default btn-hover-green" [disabled]="!congeValide" (click)="ajouter()" role="button">{{'Table.CAjouterBot'| translate}}</button>
-              </div>
-          <div class="btn-group" role="group">
-            <button type="button" class="btn btn-default" data-dismiss="modal" (click)="Close()" role="button">{{'Table.CAnnuler'| translate}}</button>
-          </div>
-        </div>
-      </div>
+     
+  <div class="posAr">
+    <button mat-mini-fab color="primary" [disabled]="!ValideConge()" (click)="ajouter()" (click)="ajouter()"><mat-icon>add</mat-icon></button>
+    <button  mat-mini-fab color="default" (click)="Close()"><mat-icon>clear</mat-icon></button>
+  </div>
   </div>
