--- a/GestionUtilisateur-FrontEnd-master3/src/app/organisme-accueil/organisme-accueil.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/organisme-accueil/organisme-accueil.component.html
@@ -5,12 +5,14 @@
     <div class="panel-body">
       <div>
         <mat-form-field>
-          <input matInput placeholder="Libellé" [(ngModel)]="orgAccueil.libelleOrg">
+          <input matInput placeholder="Libellé" [formControl]="libelleFr" [(ngModel)]="orgAccueil.libelleOrg">
+          <mat-error *ngIf="libelleFr.invalid">{{getErrorMessageFr()}}</mat-error>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="المؤسسة" [(ngModel)]="orgAccueil.libelleOrgAr">
+            <input matInput placeholder="المؤسسة" [formControl]="libelleAr" [(ngModel)]="orgAccueil.libelleOrgAr">
+            <mat-error *ngIf="libelleAr.invalid">{{getErrorMessageAr()}}</mat-error>
           </mat-form-field>
-        <button  mat-mini-fab color="primary" (click)="ajouter()">
+        <button  mat-mini-fab class="btn btn-primary" color="primary" [disabled]="valideFormulaire()" (click)="ajouter()">
             <mat-icon>add</mat-icon></button>
       </div>
       <mat-tab-group class="demo-tab-group">
@@ -28,8 +30,8 @@
         <td>{{o.idOrg}}</td>
         <td>{{o.libelleOrg}}</td>
         <td>{{o.libelleOrgAr}}</td>
-        <td><a (click)="onEditOrgAccueil(o.idOrg)" class="clickable"> <mat-icon>create</mat-icon></a> </td>
-        <td><a (click)="onDeleteOrgAccueil(o)" class="clickable"> <mat-icon>delete_sweep</mat-icon></a> </td>
+        <td><a (click)="onEditOrgAccueil(o.idOrg)" class="clickable" *ngIf="o.idOrg!=5"> <mat-icon >create</mat-icon></a> </td>
+        <td><a (click)="onDeleteOrgAccueil(o)" class="clickable"  *ngIf="o.idOrg!=5"> <mat-icon>delete_sweep</mat-icon></a> </td>
       </tr>
     </tbody>
   </table>
